Implement api setCommentAsToxic
